@@ -2,6 +2,7 @@
         * Bug fix.  Hosed Talker in KTTSMgr after removing a Talker and clicking Cancel.
         * In KTTSMgr no longer record LastTalkerID in config file; compute at load time instead.
         * Change Talker tab in KTTSMgr to "standard" layout.
+        * Bug fix.  Talker matching.  Tended to pick last talker no matter what.
 
 2004-11-13  Gary Cramblitt (PhantomsDad) <garycramblitt@comcast.net>
         * Fix.  Nothing happens when clicking Configure button for Festival Interactive
